# mcp-server-composer

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  README.md  WEEK101_COMPLETION_REPORT.md  WEEK102_COMPLETION_REPORT.md  WEEK11_COMPLETION_REPORT.md  WEEK14_COMPLETION_REPORT.md  WEEK15_COMPLETION_REPORT.md  WEEK16_COMPLETION_REPORT.md  WEEK52_COMPLETION_REPORT.md  WEEK61_COMPLETION_REPORT.md  WEEK62_COMPLETION_REPORT.md  WEEK91_COMPLETION_REPORT.md  docker-compose.yml  nginx.conf  pyproject.toml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  PHASE1_COMPLETION_REPORT.md  PROJECT_HISTORY.md  WEEK13_COMPLETION_REPORT.md  WEEK92_COMPLETION_REPORT.md
docs/plan/: PHASE1_SUMMARY.md  USER_GUIDE.md  WEEK12_COMPLETION_REPORT.md
examples/: README.md  mcp_server_composer.toml
examples/git-file/: IMPLEMENTATION_STATUS.md  Makefile  README.md  agent.py  mcp_server_composer.toml
examples/mcp-auth/: .gitignore  Makefile  README.md  config.template.json  pyproject.toml
examples/mcp-auth-example/: Makefile  README.md  pyproject.toml  requirements.txt
examples/mcp-auth-example/docs/: FLOW_EXPLAINED.md  IMPLEMENTATION.md  QUICKSTART.md  TESTING.md
examples/mcp-auth-example/mcp_auth_example/: agent.py  client.py  server.py
examples/mcp-auth/docs/: AGENT.md  DIAGRAMS.md  GITHUB.md  TESTING.md
examples/mcp-auth/mcp_auth_example/: __init__.py  __main__.py  agent.py  client.py  server.py
examples/proxy-anonymous/: .gitignore  IMPLEMENTATION_STATUS.md  Makefile  README.md  agent.py  mcp1.py  mcp2.py  mcp_server_composer.toml
examples/simple-auth/: Makefile  README.md  SUMMARY.md  requirements.txt  test_auth.py
examples/simple-auth/docs/: AGENT.md  DIAGRAMS.md  GITHUB.md  IMPLEMENTATION.md  QUICKSTART.md  TESTING.md
examples/simple-auth/simple_auth/: __main__.py  agent.py  client.py  oauth_client.py  server.py
examples/simple-auth/tests/: test_auth.py
mcp_server_composer/: cli.py  config_loader.py  tool_proxy.py
mcp_server_composer/api/: app.py  models.py
mcp_server_composer/api/routes/: __init__.py  status.py
mcp_server_composer/transport/: __init__.py
resources/: prometheus.yml
resources/grafana/dashboards/: dashboard-provider.yml
tests/: __init__.py  test_api_app.py  test_api_servers.py  test_auth.py  test_auth_jwt.py  test_auth_middleware.py  test_auth_oauth2.py  test_authz.py  test_cli.py  test_composer.py  test_composer_integration.py  test_config.py  test_discovery.py  test_process_manager.py  test_sse_transport.py  test_stdio_transport.py  test_tool_authz.py  test_tool_manager.py  test_translator.py
ui/: .env.example  README.md  index.html  package-lock.json  package.json
ui/src/: App.tsx  main.tsx
ui/src/api/: client.ts
ui/src/components/: Layout.tsx
ui/src/pages/: Configuration.tsx  Dashboard.tsx  Logs.tsx  Metrics.tsx  Servers.tsx  Settings.tsx  Tools.tsx  Translators.tsx
ui/src/store/: theme.ts
